# modorganizer-bsapacker

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build.yml
src/: ArchiveAutoService.cpp  ArchiveBuilderFactory.cpp  ArchiveNameService.cpp  ArchiveNameService.h  BsaPackerWorker.cpp  CMakeLists.txt  DummyPluginLogic.cpp  DummyPluginLogic.h  Fallout3DummyPluginService.cpp  Fallout4DummyPluginService.cpp  GeneralArchiveBuilder.cpp  ModDtoFactory.cpp  NewVegasDummyPluginService.cpp  NullArchiveBuilder.cpp  OblivionDummyPluginService.cpp  SkyrimDummyPluginService.cpp  SkyrimSEDummyPluginService.cpp  StarfieldDummyPluginService.cpp  TextureArchiveBuilder.cpp  TexturelessArchiveBuilder.cpp  bsa_packer_en.ts  bsapacker_global.h  libbsarchppWrapper.cpp  libbsarchppWrapper.h
src/bsapacker/: ArchiveAutoService.h  ArchiveBuilderFactory.h  GeneralArchiveBuilder.h  IArchiveAutoService.h  IArchiveBuilder.h  IArchiveBuilderFactory.h  IArchiveNameService.h  IDummyPluginLogic.h  NullArchiveBuilder.h  (+2 more)
tests/: ArchiveBuilderFactoryFacts.cpp  ArchiveNameServiceFacts.cpp  BsaPackerWorkerFacts.cpp  CMakeLists.txt  GeneralArchiveBuilderFacts.cpp  MockArchiveAutoService.h  MockArchiveBuilderFactory.h  MockArchiveBuilderHelper.h  MockArchiveNameService.h  MockDummyPluginLogic.h  MockDummyPluginServiceFactory.h  MockFileWriterService.h  MockHideLooseAssetService.h  MockModContext.h  MockModDtoFactory.h  MockOrganizer.h  MockOverrideFileService.h  MockPackerDialog.h  MockSettingsService.h  TextureArchiveBuilderFacts.cpp  TexturelessArchiveBuilderFacts.cpp
